--- a/6-SSD/assets/pages/process-work/index.html
+++ b/6-SSD/assets/pages/process-work/index.html
@@ -15,7 +15,13 @@
 	<script type="text/javascript" src="../../js/scripts.js"></script>
 	<!--[if lt IE 9]>
   	<script src="../../js/html5.min.js"></script>
-  	<![endif]-->
+	  <![endif]-->
+	<style>
+		td,
+		th {
+			text-align: left;
+		}
+	</style>
 </head>
 
 <body id="section3-1">
@@ -122,39 +128,9 @@
 				будет показано в дальнейшем, двухтранзисторные ячейки используются в памяти с <B>архитектурой NAND</B>.
 			</p>
 		</div><!-- .section -->
-		<div class="section" id="section2-4">
-			<h2>2.1.3 SLC и MLC</h2>
-			<p>Это два типа flash-памяти, которые на сегодняшний день применяются при изготовлении flash-накопителей.
-			</p>
-			<p><b>MLC (Multi-Level Cell — многоуровневая ячейка).</b> Память этого типа позволяет хранить более 1 бита в
-				расчете на одну ячейку. Она более выгодна с экономической точки зрения, однако менее долговечна,
-				потребляет чуть больше
-				энергии и характеризуется пониженной (по сравнению с SLC) скоростью обмена данными.
-			</p>
-			<p><b>ПРИМЕЧАНИЕ.</b> Иногда может встретиться аббревиатура <B>МВС</B> (Multi Bit Cell). Это разновидность
-				<B>MLC</B>,
-				которая позволяет хранить 2 бита на ячейку.
-			</p>
-			<p><b>SLC (Single-Level Cell — одноуровневая ячейка).</b> Наиболее скоростной и долговечный тип памяти.
-				Каждая ячейка хранит только 1 бит. С технической точки
-				зрения такая память обладает лучшими характеристиками, однако высокая
-				стоимость не позволяет назвать ее бесспорным лидером в этой паре.
-			</p>
-			<p>Многие производители flash-накопителей ищут решения, призванные повысить
-				надежность хранения и записи данных. Это обеспечивается за счет применения
-				контроллеров со сложной логикой, равномерно распределяющих нагрузку по всем
-				ячейкам. В некоторых системах наряду с flash-памятью используется ОЗУ, в котором хранится кэш из
-				наиболее востребованных выборок данных.
-			</p>
-			<p>Встречаются варианты, где комбинируются два тина памяти <B>(SLC и MLC)</B>, но
-				ввиду слабой распространенности подобных решений говорить об их преимуществах или недостатках
-				преждевременно.
-			</p>
-
-		</div><!-- .section -->
 
 		<div class="section" id="section2-5">
-			<h2>2.1.4 Архитектура NOR</h2>
+			<h2>2.1.3 Архитектура NOR</h2>
 			<p>Flash-память этого типа является родоначальницей всего направления EEPROM (от англ. Electrically Erasable
 				Programmable Read-Only Memory - электрически стираемое перепрограммируемое ПЗУ (ЭСППЗУ), один из видов
 				энергонезависимой памяти (таких как PROM и EPROM). Память такого типа может стираться и заполняться
@@ -201,8 +177,9 @@
 			</p>
 
 		</div><!-- .section -->
+
 		<div class="section" id="section2-6">
-			<h2>2.1.5 Архитектура NAND</h2>
+			<h2>2.1.4 Архитектура NAND</h2>
 			<p>Этот тип памяти появился спустя год после <B>NOR</B>. Своим рождением он обязан
 				другому гранду полупроводниковой индустрии — компании Toshiba. Чипы с такой
 				организацией запоминающих ячеек используются в миниатюрных накопителях. Они получили имя <B>NAND</B>,
@@ -227,7 +204,27 @@
 				уменьшить негативный эффект низкой скорости чтения, микросхемы <B>NAND</B> снабжаются <B>внутренним
 					кэшем</B>.
 			</p>
-			<h4>NAND флэш-память</h4>
+
+			<a href="7.jpg"><img src="7.jpg" width="362" height="371" align="center" alt="" /></a>
+			<p>К недостаткам <B>NAND</B> следует отнести то, что ячейки группируются в небольшие
+				блоки (по аналогии с кластерами жесткого диска). Поэтому при последовательном
+				чтении и записи преимущество в скорости будет у <B>NAND</B>. Однако, с другой стороны, <B>NAND</B>
+				значительно проигрывает в операциях с произвольным доступом и не
+				позволяет напрямую работать с байтами данных. Если необходимо изменить
+				несколько бит, система вынуждена переписывать весь блок, а это, учитывая ограниченность циклов записи,
+				ведет к повышенному износу ячеек.
+			</p>
+			<p>Одно из последних новшеств — многослойная структура, предложенная Toshiba.
+				Ячейки будут располагаться слоями, как на стеллажах полки. Это позволит без
+				существенного изменения технологических процессов увеличить количество элементарных ячеек в одном чипе.
+			</p>
+			<p>Таким образом <b>недостатками</b> архитектуры NAND являются: <i>произвольный доступ к памяти медленне,
+					чем у архитектуры NOR </i> и <i>нельзя напрямую работать с байтами данных</i>, а
+				<b>достоинствами</b> - <i>хорошая масштабируемость памяти</i> и <i>быстрая запись данных</i>.</p>
+		</div>
+
+		<div class="section" id="section2-arch">
+			<h2>2.1.5 NAND флэш-память</h2>
 			<p>
 				NAND-флэш является основным и самым дорогостоящим компонентом твердотельного накопителя. Выделим три
 				основных типа памяти, используемых в современных SSD:
@@ -247,55 +244,115 @@
 				Так как 3D NAND является самым распространенным типом памяти в твердотельных накопителях, давайте
 				рассмотрим подробнее её виды и принцип работы.
 			</p>
-			<h4>Виды 3D NAND флэш-памяти</h4>
+		</div><!-- .section -->
+
+		<div class="section" id="section2-types">
+			<h2>2.1.6 Виды 3D NAND флэш-памяти</h2>
 			<p>
 				Тип 3D NAND памяти, используемый в накопителе, напрямую влияет на его эффективность и долговечность. На
 				данный момент в твердотельных накопителях вы можете встретить следующие типы 3D NAND памяти:
 
 				<ul>
-					<li>SLC — имеет ячейки памяти, содержащие один бит информации; самая эффективная, долговечная и
-						дорогая 3D
-						NAND памятью, использующаяся в серверных и профессиональных накопителях.</li>
-					<li>MLC — имеет ячейки памяти, содержащие два бита информации; следующая по характеристикам и цене
-						после
-						SLC.</li>
-					<li>TLC — имеет ячейки памяти, содержащие три бита информации; самая распространенная память в
-						потребительских устройствах массового сегмента, обеспечивающая хорошее соотношение цены и
-						характеристик.</li>
-					<li>QLC — имеет ячейки памяти, содержащие 4 бита информации, и является самой дешёвой и самой слабой
-						по
-						характеристикам памятью, при этом позволяя создавать на своей основе накопители большого объёма.
+					<li><b>SLC</b> (Single-Level Cells) – ячейка памяти, способная хранить 1 бит информации. Память SLC
+						имеет высокую
+						производительность, низкое энергопотребление, наибольшую скорость записи и количество циклов
+						Program/Erase. Память типа SLC обычно используется в серверах высокого уровня, поскольку
+						стоимость SSD на основе SLC велика.</li><br />
+					<li><b>MLC</b> (Multi-Level Cell) – ячейка памяти, способная хранить несколько бит информации. MLC
+						дешевле
+						SLC, однако обладает меньшей выносливостью и меньшим ресурсом циклов Program/Erase. MLC -
+						хороший выбор для коммерческих и рабочих платформ, т.к. характеризуется хорошим соотношение
+						цена/скорость работы.</li><br />
+					<li>
+						<b>eMLC</b> (Enterprise Multi-Level Cell) – ячейка памяти, аналогичная по структуре обычной MLC,
+						но с
+						увеличенным ресурсом по циклам Program/Erase. По надежности eMLC находится между SLC и MLC, а
+						стоит ненамного дороже MLC. Типичное применение eMLC - рабочие станции и серверы среднего
+						класса.
+					</li><br />
+					<li><b>TLC</b> (Triple-Level Cell) – ячейка памяти, способная хранить 3 бита информации. Обладает
+						большей
+						плотностью, но меньшей выносливостью по сравнению с SLC и MLC. TLC также отстает от SLC и MLC по
+						скорости чтения и записи и ресурсу в циклах Program/Erase. До настоящего момента память типа TLC
+						NAND использовалась в основном в flash-накопителях (флешках), однако совершенствование
+						технологий производства сделало возможным использование памяти TLC и в стандартных SSD.</li>
+					<br />
+					<li><b>QLC</b> (Quad-Level Cell) - ячейка памяти, способная хранить 4 бита информации. По состоянию
+						на
+						февраль 2020 года NAND-память типа QLC является самой доступной по стоимости хранения 1 ГБ
+						данных, приближаясь по данному параметру к традиционным жестким дискам. При этом по
+						быстродействию и ресурсу на запись QLC-память лишь немного уступает не только SLC- и MLC-, но и
+						TCL-памяти.
 					</li>
 				</ul>
-				<a href="8.jpg"><img src="8.jpg" width="600" height="auto" align="center" alt="" /></a>
-				<p style="text-align: center;">Разница в плотности между типами 3D NAND-памяти </p>
-				Самым главным отличием различных типов 3D NAND памяти является их долговечность. Дабы понять, за счёт
-				чего возникает эта разница, рассмотрим принцип работы 3D NAND памяти.
+				<a href="10.jpg"><img src="10.jpg" width="500" height="auto" align="center" alt="" /></a>
+				<p>Самым главным отличием различных типов 3D NAND памяти является их долговечность. Дабы понять, за счёт
+					чего возникает эта разница, рассмотрим принцип работы 3D NAND памяти.</p>
+			</p>
+		</div><!-- .section -->
 
+		<div class="section" id="section2-compare">
+			<h2>2.1.7 Сравнение архитектур</h2>
+			<p>Большинство производителей SSD накопителей используют энергонезависимую флэш-память NAND при построении
+				своих твердотельных накопителей из-за более низкой стоимости по сравнению с DRAM и способности сохранять
+				данные без постоянного источника питания, обеспечивая сохранность данных за счет внезапных отключений
+				питания. SSD накопители с флэш-памятью работают медленнее, чем решения DRAM, а некоторые ранние
+				разработки были еще медленнее, чем жесткие диски HDD после продолжительного использования. Эта проблема
+				была решена контроллерами, которые вышли в 2009 году. Ниже приведена сравнительная таблица архитектур.
 			</p>
-
-			<a href="7.jpg"><img src="7.jpg" width="362" height="371" align="center" alt="" /></a>
-			<p>К недостаткам <B>NAND</B> следует отнести то, что ячейки группируются в небольшие
-				блоки (по аналогии с кластерами жесткого диска). Поэтому при последовательном
-				чтении и записи преимущество в скорости будет у <B>NAND</B>. Однако, с другой стороны, <B>NAND</B>
-				значительно проигрывает в операциях с произвольным доступом и не
-				позволяет напрямую работать с байтами данных. Если необходимо изменить
-				несколько бит, система вынуждена переписывать весь блок, а это, учитывая ограниченность циклов записи,
-				ведет к повышенному износу ячеек.
-			</p>
-			<p>Одно из последних новшеств — многослойная структура, предложенная Toshiba.
-				Ячейки будут располагаться слоями, как на стеллажах полки. Это позволит без
-				существенного изменения технологических процессов увеличить количество элементарных ячеек в одном чипе.
-			</p>
-			<p>Таким образом <b>недостатками</b> архитектуры NAND являются: <i>произвольный доступ к памяти медленне,
-					чем у архитектуры NOR </i> и <i>нельзя напрямую работать с байтами данных</i>, а
-				<b>достоинствами</b> - <i>хорошая масштабируемость памяти</i> и <i>быстрая запись данных</i>.</p>
+			<table>
+				<caption style="font-size: 22px;"><b>Сравнение архитектур</b></caption>
+				<thead>
+					<tr>
+						<th>
+							Сравнительная характеристика
+						</th>
+						<th>
+							MLC : SLC
+						</th>
+						<th>
+							NAND : NOR
+						</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>Коэффициент стойкости</td>
+						<td>1 : 10</td>
+						<td>1 : 10</td>
+					</tr>
+					<tr>
+						<td>Соотношение последовательной записи</td>
+						<td>1 : 3</td>
+						<td>1 : 4</td>
+					</tr>
+					</tr>
+					<tr>
+						<td>Соотношение последовательного чтения</td>
+						<td>1 : 1</td>
+						<td>1 : 5</td>
+					</tr>
+					<tr>
+						<td>Соотношение цен</td>
+						<td>1 : 1.3</td>
+						<td>1 : 0.7</td>
+					</tr>
+				</tbody>
+			</table>
+			<p>SSD накопители на основе флэш-памяти обычно упаковываются в стандартные форм-факторы дисковода (1,8, 2,5
+				и 3,5 дюйма), но также и в более компактные форм-факторы меньшего размера, такие как форм-фактор M.2,
+				что стало возможным благодаря небольшому размеру флэш-памяти.</p>
+			<p>Более дешевые накопители обычно используют трехуровневую (TLC) или многоуровневую (MLC) флэш-память,
+				которые медленнее и менее надежны, чем одноуровневая (SLC) флэш-память. Но, это может быть смягчено или
+				даже отменено внутренней структурой дизайна SSD, такой как чередование, изменениями в алгоритмах записи,
+				и более высокой избыточной инициализацией, с которой могут работать алгоритмы выравнивания износа.</p>
 		</div><!-- .section -->
 
 		<div class="section" id="section2-7">
-
-
 			<h2>2.2 Контроллёр накопителей на твердотельной памяти</h2>
+			<p>Ключевыми компонентами SSD-накопителей являются контроллер и память для хранения данных. Изначально,
+				основным компонентом памяти в SSD была микросхем энергозависимой памяти (DRAM), но с 2009 года в
+				основном используется флэш - энергонезависимая память (NAND).</p>
 			<p>Главной задачей контроллера является обеспечение операций чтения / записи, и управление структурой
 				размещения данных. Основываясь на матрице размещения блоков, в какие ячейки уже проводилась запись, а в
 				какие еще нет, контроллер должен оптимизировать скорость записи и обеспечить максимально длительный срок
@@ -305,6 +362,7 @@
 				ограничения накладывают определенные обязанности на правильный интеллектуальный алгоритм работы
 				контроллера. Поэтому, правильно настроенные и оптимизированные алгоритмы контролера могут существенно
 				повысить производительность и долговечность работы SSD - накопителя.</p>
+
 			<p><I>В контроллер входят следующие основные элементы:</I></p>
 			<p> <B>Processor</B> – как правило 16 или 32 разрядный микроконтроллер. Выполняет инструкции микропрограммы,
 				отвечает за перемешивание и выравнивание данных на Flash, диагностику SMART, кеширование, безопасность.
@@ -328,7 +386,10 @@
 				<li>коррекция ошибок (ECC);</li>
 				<li>шифрование (AES);</li>
 				<li>возможность S.M.A.R.T мониторинга;</li>
+				<li>сборка мусора;</li>
 				<li>пометка и запись о нерабочих блоках для добавления их в чёрный список;</li>
+				<li>обнаружение и исправление ошибок с помощью кода коррекции ошибок (ЕСС);</li>
+				<li>выравнивание износа;</li>
 				<li>сжатие данных.</li>
 			</ul>
 			<p> Все контроллёры памяти нацелены на параллельно подключенную NAND - память. Так как шина памяти одного
