--- a/index.html
+++ b/index.html
@@ -82,7 +82,9 @@
                         <span class="icon">
                           <i class="fa fa-bullseye"></i>
                         </span>
-                        <span class="title">НСМД</span>
+                        <span class="title"
+                          >Накопители на сменных магнитных дисках</span
+                        >
                       </span>
                       <svg
                         viewBox="0 0 173.20508075688772 200"
@@ -118,7 +120,9 @@
                         <span class="icon">
                           <i class="fa fa-braille"></i>
                         </span>
-                        <span class="title">HDD</span>
+                        <span class="title"
+                          >Накопители на жёстких магнитных диисках (HDD)</span
+                        >
                       </span>
                       <svg
                         viewBox="0 0 173.20508075688772 200"
@@ -154,43 +158,9 @@
                         <span class="icon">
                           <i class="fa fa-id-badge"></i>
                         </span>
-                        <span class="title">Оптические накопители</span>
-                      </span>
-                      <svg
-                        viewBox="0 0 173.20508075688772 200"
-                        height="200"
-                        width="174"
-                        version="1.1"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z"
-                          fill="#1e2530"
-                        ></path>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="hexagon-item">
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <a
-                      href="6-SSD/start.html"
-                      target="_blank"
-                      class="hex-content"
-                    >
-                      <span class="hex-content-inner">
-                        <span class="icon">
-                          <i class="fa fa-life-ring"></i>
-                        </span>
-                        <span class="title">SSD</span>
+                        <span class="title"
+                          >Накопители на сменных оптические дисках</span
+                        >
                       </span>
                       <svg
                         viewBox="0 0 173.20508075688772 200"
@@ -242,6 +212,45 @@
                       </svg>
                     </a>
                   </div>
+                  <div class="hexagon-item">
+                    <div class="hex-item">
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                    </div>
+                    <div class="hex-item">
+                      <div></div>
+                      <div></div>
+                      <div></div>
+                    </div>
+                    <a
+                      href="6-SSD/start.html"
+                      target="_blank"
+                      class="hex-content"
+                    >
+                      <span class="hex-content-inner">
+                        <span class="icon">
+                          <i class="fa fa-life-ring"></i>
+                        </span>
+                        <span class="title"
+                          >Твердотельные накопители (SSD)</span
+                        >
+                      </span>
+                      <svg
+                        viewBox="0 0 173.20508075688772 200"
+                        height="200"
+                        width="174"
+                        version="1.1"
+                        xmlns="http://www.w3.org/2000/svg"
+                      >
+                        <path
+                          d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z"
+                          fill="#1e2530"
+                        ></path>
+                      </svg>
+                    </a>
+                  </div>
+
                   <div class="hexagon-item">
                     <div class="hex-item">
                       <div></div>
