--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                       <div></div>
                     </div>
                     <a
-                      href="2-НСМД/MAIN.HTM"
+                      href="2-НСМД/index.html"
                       target="_blank"
                       class="hex-content"
                     >
