--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8"
               >
                 <div class="page-title home text-center">
-                  <span class="heading-page"> Медиа материалы</span>
+                  <span class="heading-page">Медиа материалы по курсу ЭВМ и периферийные устройства</span>
                 </div>
 
                 <div class="hexagon-menu clear">
