Update: main menu, architecture chapter.

--- a/6-SSD/assets/pages/process-work/index.html
+++ b/6-SSD/assets/pages/process-work/index.html
@@ -28,8 +28,6 @@
 	<div id="wrapper">
 		<a id="back" href="../../../start.html" title="Назад на главную"></a>
 		<br><br><br>
-
-
 		<h1>2. Устройство SSD - накопителей</h1>
 		<div class="section" id="section2-1">
 			<p>Устройство SSD - накопителей представлено на рисунке 24. Работа и принцип действия контролеера и
@@ -131,6 +129,7 @@
 
 		<div class="section" id="section2-5">
 			<h2>2.1.3 Архитектура NOR</h2>
+			<h1>Архитектура NOR</h1>
 			<p>Flash-память этого типа является родоначальницей всего направления EEPROM (от англ. Electrically Erasable
 				Programmable Read-Only Memory - электрически стираемое перепрограммируемое ПЗУ (ЭСППЗУ), один из видов
 				энергонезависимой памяти (таких как PROM и EPROM). Память такого типа может стираться и заполняться
@@ -179,7 +178,7 @@
 		</div><!-- .section -->
 
 		<div class="section" id="section2-6">
-			<h2>2.1.4 Архитектура NAND</h2>
+			<h1>Архитектура NAND</h1>
 			<p>Этот тип памяти появился спустя год после <B>NOR</B>. Своим рождением он обязан
 				другому гранду полупроводниковой индустрии — компании Toshiba. Чипы с такой
 				организацией запоминающих ячеек используются в миниатюрных накопителях. Они получили имя <B>NAND</B>,
@@ -224,7 +223,7 @@
 		</div>
 
 		<div class="section" id="section2-arch">
-			<h2>2.1.5 NAND флэш-память</h2>
+			<h1>NAND флэш-память</h1>
 			<p>
 				NAND-флэш является основным и самым дорогостоящим компонентом твердотельного накопителя. Выделим три
 				основных типа памяти, используемых в современных SSD:
@@ -247,7 +246,7 @@
 		</div><!-- .section -->
 
 		<div class="section" id="section2-types">
-			<h2>2.1.6 Виды 3D NAND флэш-памяти</h2>
+			<h1>Виды 3D NAND флэш-памяти</h1>
 			<p>
 				Тип 3D NAND памяти, используемый в накопителе, напрямую влияет на его эффективность и долговечность. На
 				данный момент в твердотельных накопителях вы можете встретить следующие типы 3D NAND памяти:
@@ -292,7 +291,7 @@
 		</div><!-- .section -->
 
 		<div class="section" id="section2-compare">
-			<h2>2.1.7 Сравнение архитектур</h2>
+			<h1>Сравнение архитектур</h1>
 			<p>Большинство производителей SSD накопителей используют энергонезависимую флэш-память NAND при построении
 				своих твердотельных накопителей из-за более низкой стоимости по сравнению с DRAM и способности сохранять
 				данные без постоянного источника питания, обеспечивая сохранность данных за счет внезапных отключений
