--- a/6-SSD/start.html
+++ b/6-SSD/start.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html; charset=utf8" />
+  <meta charset="UTF-8">
   <title>Медиа-курс "Накопители на твёрдотельной памяти (SSD)"</title>
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png" />
   <link rel="stylesheet" type="text/css" href="assets/css/ui-darkness/jquery-ui-1.9.2.custom.min.css" />
@@ -123,28 +124,7 @@
               </a>
             </li>
             <li>
-              <a href="assets/pages/process-work/index.html#section2-6">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.1.3 Архитектура
-                NOR
-              </a>
-            </li>
-            <li>
-              <a href="assets/pages/process-work/index.html#section2-5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.1.4 Архитектура
-                NAND
-              </a>
-            </li>
-            <li>
-              <a href="assets/pages/process-work/index.html#section2-arch">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.1.5 NAND
-                флэш-память
-              </a>
-            </li>
-            <li>
-              <a href="assets/pages/process-work/index.html#section2-types">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.1.6 Виды 3D
-                NAND флэш-памяти
-              </a>
-            </li>
-            <li>
-              <a href="assets/pages/process-work/index.html#section2-compare">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.1.7
-                Сравнение архитектур
+              <a href="assets/pages/process-work/index.html#section2-5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.1.3 Архитектура
               </a>
             </li>
             <li>
