--- a/index.html
+++ b/index.html
@@ -1,298 +1,65 @@
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
+<!DOCTYPE html>
+<html lang="en">
 
-  <body>
-    <main class="site-wrapper">
-      <div class="pt-table desktop-768">
-        <div
-          class="pt-tablecell page-home relative"
-          style="
-            background-image: url(https://images.unsplash.com/photo-1486870591958-9b9d0d1dda99?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);
-            background-position: center;
-            background-size: cover;
-          "
-        >
-          <div class="overlay"></div>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Медиа материалы по курсу ЭВМ и периферийные устройства</title>
+  <link rel="shortcut icon" type="image/x-icon" href="./6-SSD/assets/images/favicon.png" />
+  <link rel="stylesheet" type="text/css" href="./6-SSD/assets/css/ui-darkness/jquery-ui-1.9.2.custom.min.css" />
+  <link rel="stylesheet" type="text/css" href="./6-SSD/assets/css/style.css" />
+  <script type="text/javascript" src="./6-SSD/assets/js/jquery-1.8.2.min.js"></script>
+  <script type="text/javascript" src="./6-SSD/assets/js/jquery-ui-1.9.2.custom.min.js"></script>
+  <script type="text/javascript" src="./6-SSD/assets/js/scripts.js"></script>
+</head>
 
-          <div class="container">
-            <div class="row">
-              <div
-                class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8"
-              >
-                <div class="page-title home text-center">
-                  <span class="heading-page">Медиа материалы по курсу ЭВМ и периферийные устройства</span>
-                </div>
+<body>
+  <div id="wrapper" class="bg_hdd">
+    <h1>Медиа-курс "Накопители на твёрдотельной памяти (SSD)"</h1>
+    <div id="navigation">
+      <table cellpadding="0" cellspacing="0">
+        <tr>
+          <h2>
+            <a href="2-НСМД/index.html" target="_blank">1. &nbsp;Основы Магнитной Записи</a>
+          </h2>
+        </tr>
+        <tr>
+          <h2>
+            <a href="1-ОсновыМагнЗаписи/index.html" target="_blank"> 2. &nbsp;Накопители на сменных магнитных дисках</a>
+          </h2>
+        </tr>
+        <tr>
+          <h2>
+            <a href="4-HDD/start.html" target="_blank"> 3. &nbsp;Накопители на жёстких магнитных диисках (HDD)</a>
+          </h2>
+        </tr>
+        <tr>
+          <h2>
+            <a href="5-CD/index.html" target="_blank"> 4. &nbsp;Накопители на сменных оптические дисках (CD, DVD)</a>
+          </h2>
+        </tr>
+        <tr>
+          <h2>
+            <a href="7-НовыйПункт/index.html" target="_blank"> 5. &nbsp;Накопитель на магнитной ленте</a>
+          </h2>
 
-                <div class="hexagon-menu clear">
-                  <div class="hexagon-item">
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <a
-                      href="1-ОсновыМагнЗаписи/index.html"
-                      target="_blank"
-                      class="hex-content"
-                    >
-                      <span class="hex-content-inner">
-                        <span class="icon">
-                          <i class="fa fa-universal-access"></i>
-                        </span>
-                        <span class="title">Основы Магнитной Записи</span>
-                      </span>
-                      <svg
-                        viewBox="0 0 173.20508075688772 200"
-                        height="200"
-                        width="174"
-                        version="1.1"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z"
-                          fill="#1e2530"
-                        ></path>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="hexagon-item">
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <a
-                      href="2-НСМД/index.html"
-                      target="_blank"
-                      class="hex-content"
-                    >
-                      <span class="hex-content-inner">
-                        <span class="icon">
-                          <i class="fa fa-bullseye"></i>
-                        </span>
-                        <span class="title"
-                          >Накопители на сменных магнитных дисках</span
-                        >
-                      </span>
-                      <svg
-                        viewBox="0 0 173.20508075688772 200"
-                        height="200"
-                        width="174"
-                        version="1.1"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z"
-                          fill="#1e2530"
-                        ></path>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="hexagon-item">
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <a
-                      href="4-HDD/start.html"
-                      target="_blank"
-                      class="hex-content"
-                    >
-                      <span class="hex-content-inner">
-                        <span class="icon">
-                          <i class="fa fa-braille"></i>
-                        </span>
-                        <span class="title"
-                          >Накопители на жёстких магнитных диисках (HDD)</span
-                        >
-                      </span>
-                      <svg
-                        viewBox="0 0 173.20508075688772 200"
-                        height="200"
-                        width="174"
-                        version="1.1"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z"
-                          fill="#1e2530"
-                        ></path>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="hexagon-item">
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <a
-                      href="5-CD/index.html"
-                      target="_blank"
-                      class="hex-content"
-                    >
-                      <span class="hex-content-inner">
-                        <span class="icon">
-                          <i class="fa fa-id-badge"></i>
-                        </span>
-                        <span class="title"
-                          >Накопители на сменных оптические дисках</span
-                        >
-                      </span>
-                      <svg
-                        viewBox="0 0 173.20508075688772 200"
-                        height="200"
-                        width="174"
-                        version="1.1"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z"
-                          fill="#1e2530"
-                        ></path>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="hexagon-item">
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <a
-                      href="7-НовыйПункт/index.html"
-                      target="_blank"
-                      class="hex-content"
-                    >
-                      <span class="hex-content-inner">
-                        <span class="icon">
-                          <i class="fa fa-clipboard"></i>
-                        </span>
-                        <span class="title">Накопитель на магнитной ленте</span>
-                      </span>
-                      <svg
-                        viewBox="0 0 173.20508075688772 200"
-                        height="200"
-                        width="174"
-                        version="1.1"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z"
-                          fill="#1e2530"
-                        ></path>
-                      </svg>
-                    </a>
-                  </div>
-                  <div class="hexagon-item">
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <a
-                      href="6-SSD/start.html"
-                      target="_blank"
-                      class="hex-content"
-                    >
-                      <span class="hex-content-inner">
-                        <span class="icon">
-                          <i class="fa fa-life-ring"></i>
-                        </span>
-                        <span class="title"
-                          >Твердотельные накопители (SSD)</span
-                        >
-                      </span>
-                      <svg
-                        viewBox="0 0 173.20508075688772 200"
-                        height="200"
-                        width="174"
-                        version="1.1"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z"
-                          fill="#1e2530"
-                        ></path>
-                      </svg>
-                    </a>
-                  </div>
+        </tr>
+        <tr>
+          <h2>
+            <a href="6-SSD/start.html" target="_blank"> 6. &nbsp;Твердотельные накопители (SSD)</a>
+          </h2>
 
-                  <div class="hexagon-item">
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <div class="hex-item">
-                      <div></div>
-                      <div></div>
-                      <div></div>
-                    </div>
-                    <a
-                      href="8-НовыйПункт/index.html"
-                      target="_blank"
-                      class="hex-content"
-                    >
-                      <span class="hex-content-inner">
-                        <span class="icon">
-                          <i class="fa fa-map-signs"></i>
-                        </span>
-                        <span class="title">Новый пункт</span>
-                      </span>
-                      <svg
-                        viewBox="0 0 173.20508075688772 200"
-                        height="200"
-                        width="174"
-                        version="1.1"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M86.60254037844386 0L173.20508075688772 50L173.20508075688772 150L86.60254037844386 200L0 150L0 50Z"
-                          fill="#1e2530"
-                        ></path>
-                      </svg>
-                    </a>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </main>
-  </body>
+        </tr>
+        <tr>
+          <h2>
+            <a href="8-НовыйПункт/index.html" target="_blank"> 7. &nbsp;Новый пункт</a>
+          </h2>
+
+        </tr>
+      </table>
+    </div>
+  </div>
+  <!-- #wrapper -->
+</body>
+
 </html>
