rename video material

--- a/6-SSD/assets/pages/video/index.html
+++ b/6-SSD/assets/pages/video/index.html
@@ -34,12 +34,12 @@
           const videos = [
             {
               title:
-                "КАК ВЫБРАТЬ SSD ДИСК в 2020? Важные характеристики, TLC и MLC.",
+                "КАК ВЫБРАТЬ SSD ДИСК в 2020? Важные характеристики, трехуровневые элементарные ячейки и многоуровневые элементарные ячейки.",
               url: "https://www.youtube.com/embed/Qa4o7Kj6Q3U",
             },
             {
               title:
-                "В чём разница и что лучше выбрать: жёсткий диск/HDD/SSD/m2 или NVMe?",
+                "В чём разница и что лучше выбрать: жёсткий диск/HDD/SSD или с энергонезависимой памятью?",
               url: "https://www.youtube.com/embed/RJ6fWVm3yB8",
             },
             {
@@ -47,22 +47,17 @@
               url: "https://www.youtube.com/embed/sAzGiPMJGtE",
             },
             {
-              title: "M.2 NVMe на старых материнских платах",
+              title: "Карта расширения M.2 с энергозависимой памятью (NVMe) на старых материнских платах",
               url: "https://www.youtube.com/embed/gVUdeBDi0lk",
             },
             {
-              title: "SSD. Как работают, почему ломаются? SLC, MLC, TLC, QLC",
+              title: "SSD. Как работают, почему ломаются? Одноуровневые и трех-, четырех-, шестнадцатиуровневые элементрые ячейки",
               url: "https://www.youtube.com/embed/7onkTUts_-w",
             },
             {
               title:
-                "How do SSDs Work? | How does your Smartphone store data? | Insanely Complex Nanoscopic Structures!",
+                "Как работают SSD? | Как смартфоны хранят данные? | Невероятно сложные наноскопические структуры!",
               url: "https://www.youtube.com/embed/5Mh3o886qpg",
-            },
-            {
-              title:
-                "Review: Samsung T7 Touch portable external SSD with fingerprint sensor",
-              url: "https://www.youtube.com/embed/dWktvLj-ino",
             },
           ];
 
